Use per-instance mpmissions (F3)
